camel-quarkus/3.27.x/user-guide/native-mode.md
# Native mode

Things to consider before you run your application in native mode.

## Character encodings

By default, not all `Charsets` are available in native mode.

As such, you may face situations where an encoding is missing in native mode, for instance an application throwing `UnsupportedCharsetException`. In such a case, you may consider using the configuration option below:

```properties
quarkus.native.add-all-charsets = true
```

See also [quarkus.native.add-all-charsets](https://quarkus.io/guides/all-config#quarkus-core_quarkus.native.add-all-charsets) in Quarkus documentation.

## Locale

By default, only the building JVM default locale is included in the native image. Quarkus provides a way to set the locale via `application.properties`, so that you do not need to rely on `LANG` and `LC_*` environment variables:

```properties
quarkus.default-locale=en-US
```

There is also support for embedding multiple locales into the native image.

```properties
quarkus.locales=en-US,es-ES,fr-FR
```

Using a value of `all` will include all available locales into the native image.

## Embedding resources in the native executable

Resources accessed via `Class.getResource()`, `Class.getResourceAsStream()`, `ClassLoader.getResource()`, `ClassLoader.getResourceAsStream()`, etc. at runtime need to be explicitly listed for including in the native executable.

This can be done using Quarkus `quarkus.native.resources.includes` and `quarkus.native.resources.excludes` properties in `application.properties` file as demonstrated below:

```properties
quarkus.native.resources.includes = docs/*,images/*
quarkus.native.resources.excludes = docs/ignored.adoc,images/ignored.png
```

In the example above, resources named `docs/included.adoc` and `images/included.png` would be embedded in the native executable while `docs/ignored.adoc` and `images/ignored.png` would not.

`resources.includes` and `resources.excludes` are both lists of comma separated Ant-path style glob patterns. Please refer to [Quarkus documentation](https://quarkus.io/guides/building-native-image#quarkus-native-pkg-native-config_quarkus.native.resources.includes) for more details.

## Using the onException clause in native mode

When using [Camel `onException` handling](../../../manual/exception-clause.md) in native mode, it is the application developers responsibility to register the exception classes for reflection.

For instance, with an exception handler like this

```java
onException(MyException.class).handled(true);
from("direct:route-that-could-produce-my-exception").throw(MyException.class);
```

the class `MyException` should be registered for reflection, see more in [Registering classes for reflection](#reflection).

## Registering classes for reflection

By default, dynamic reflection is not available in native mode. Classes for which reflective access is needed, have to be registered for reflection at compile time.

In many cases, application developers do not need to care because Quarkus extensions are able to detect the classes that require reflection and register them automatically.

However, in some situations, Quarkus extensions may miss some classes and it is up to the application developer to register them. There are two ways to do that:

1.  The `[@io.quarkus.runtime.annotations.RegisterForReflection](https://quarkus.io/guides/writing-native-applications-tips#alternative-with-registerforreflection)` annotation can be used to register classes on which it is used, or it can also register third party classes via its `targets` attribute.
    
    ```java
    import io.quarkus.runtime.annotations.RegisterForReflection;
    
    @RegisterForReflection
    class MyClassAccessedReflectively {
    }
    
    @RegisterForReflection(
        targets = {
            org.third-party.Class1.class,
            org.third-party.Class2.class
        }
    )
    class ReflectionRegistrations {
    }
    ```
    
2.  The `quarkus.camel.native.reflection` options in `application.properties`:
    
    ```properties
    quarkus.camel.native.reflection.include-patterns = org.apache.commons.lang3.tuple.*
    quarkus.camel.native.reflection.exclude-patterns = org.apache.commons.lang3.tuple.*Triple
    ```
    
    For these options to work properly, the artifacts containing the selected classes must either contain a Jandex index (`META-INF/jandex.idx`) or they must be registered for indexing using the `quarkus.index-dependency.*` options in `application.properties` - e.g.
    
    ```properties
    quarkus.index-dependency.commons-lang3.group-id = org.apache.commons
    quarkus.index-dependency.commons-lang3.artifact-id = commons-lang3
    ```
    

## Registering classes for serialization

If serialization support is requested via `quarkus.camel.native.reflection.serialization-enabled`, the classes listed in [CamelSerializationProcessor.BASE\_SERIALIZATION\_CLASSES](https://github.com/apache/camel-quarkus/blob/main/extensions-core/core/deployment/src/main/java/org/apache/camel/quarkus/core/deployment/CamelSerializationProcessor.java) are automatically registered for serialization.

Users can register more classes using `@io.quarkus.runtime.annotations.RegisterForReflection(serialization = true)`.